security_groups.tf
resource "aws_security_group" "main" {
  vpc_id = data.aws_vpc.default_vpc.id
}

resource "aws_security_group" "bastion" {
  vpc_id = data.aws_vpc.default_vpc.id
}

resource "aws_security_group_rule" "ssh_ingress" {
  type              = "ingress"
  description       = "SSH"
  to_port           = 22
  from_port         = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion.id
}

resource "aws_security_group_rule" "ssh_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion.id
}

resource "aws_security_group_rule" "tcp_ingress" {
  type              = "ingress"
  description       = "SSH"
  to_port           = 80
  from_port         = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.main.id
}

resource "aws_security_group_rule" "tcp_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.main.id
}
